# computer-networks

hw1/: hw1.xlsx  log_1024_5000_10.txt  log_1_2000_25.txt  log_32_1024_25.txt  log_52_1000_10.txt  pom.xml  ~$hw1.xlsx
hw1/src/main/java/com/network/: Client.java  Server.java
hw2/: CMakeLists.txt  config.txt
hw2/src/: ArpCapture.cpp  ArpCapture.h  ArpSender.cpp  ArpSender.h  ArpStatistics.cpp  ArpStatistics.h  Config.cpp  Config.h  main.cpp
hw3/: CMakeLists.txt
hw3/src/: Config.cpp  Config.h  DnsCapture.cpp  DnsCapture.h  DnsSender.cpp  DnsSender.h  main.cpp  resolver.cpp  resolver.h  sniffer.cpp  sniffer.h
hw4/: .gitignore  CMakeLists.txt
hw4/src/client/: LocalFileScanner.cpp  LocalFileScanner.h  client.cpp  client.h  main.cpp
hw4/src/client/client1_storage/: 1.txt  3.txt
hw4/src/common/: Message.cpp  Message.h
hw4/src/server/: ClientSession.cpp  ClientSession.h  main.cpp  server.cpp  server.h
